--- a/src/styles/_main.scss
+++ b/src/styles/_main.scss
@@ -1,14 +1,11 @@
-@import "mixin";
 @import "variables";
 
 .main {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px 48px;
   width: 1024px;
-  height: 856px;
-  @include flex-space-between;
-  align-content: space-between;
-  align-self: center;
-  flex-wrap: wrap;
-  margin: 50px 0;
+  margin: 50px auto;
   padding: 0 40px;
   @media (min-width: 1199px) {
     width: 1200px;
