--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -4,6 +4,7 @@
   text-transform: uppercase;
   font-size: $normal-font-size;
   font-weight: 500;
+  grid-column-end: none;
 
   &__list {
     display: flex;
