--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -1,7 +1,7 @@
 @import "variables";
 
 .card {
-  max-width: 200px;
+  width: 200px;
   border: 1px solid #f3f3f3;
   border-radius: 5px;
   padding: 30px 14px 15px;
@@ -28,7 +28,6 @@
 
   &__code {
     font-size: $small-font-size;
-    line-height: 13px;
     padding-bottom: 15px;
   }
 }
