--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -1,10 +1,9 @@
 @import "variables";
 
 .header {
-  display: grid;
-  grid-template-columns: 1fr 5fr;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  // height: 60px;
   padding: 0 50px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
